--- a/src/pages/resources/mainnet/upgrades/v31.md
+++ b/src/pages/resources/mainnet/upgrades/v31.md
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.31
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2023-Jan-30` mainnet upgrade to axelar-core `v0.31.2`, vald `v0.31.2`, and tofnd `v0.10.1`.
 
