--- a/src/pages/resources/mainnet/upgrades/v33.md
+++ b/src/pages/resources/mainnet/upgrades/v33.md
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.33
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2023-April-11` mainnet upgrade to axelar-core `v0.33.1`, vald `v0.33.1`, and tofnd `v0.10.1`.
 
