--- a/src/pages/resources/testnet/upgrades/v18.md
+++ b/src/pages/resources/testnet/upgrades/v18.md
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.18
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-May-20` testnet upgrade to axelar-core `v0.18.2`, vald `v0.18.2`, and tofnd `v0.10.1`.
 
