--- a/src/pages/resources/testnet/upgrades/v22.md
+++ b/src/pages/resources/testnet/upgrades/v22.md
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.22
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-Aug-12` testnet upgrade to axelar-core `v0.22.1`, vald `v0.22.1`, and tofnd `v0.10.1`.
 
