--- a/src/pages/resources/testnet/upgrades/v31.md
+++ b/src/pages/resources/testnet/upgrades/v31.md
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.31
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2023-Jan-24` testnet upgrade to axelar-core `v0.31.2`, vald `v0.31.2`, and tofnd `v0.10.1`.
 Release can be found [here](https://github.com/axelarnetwork/axelar-core/releases/tag/v0.31.2).
