--- a/src/pages/resources/mainnet/upgrades/v17.md
+++ b/src/pages/resources/mainnet/upgrades/v17.md
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.17
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-Apr-28` mainnet upgrade to axelar-core `v0.17.1`, vald `v0.17.0`, and tofnd `v0.10.1`.
 
