--- a/src/pages/resources/mainnet/upgrades/v21.md
+++ b/src/pages/resources/mainnet/upgrades/v21.md
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.21
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-Aug-29` mainnet upgrade to axelar-core `v0.21.1`, vald `v0.21.1`, and tofnd `v0.10.1`.
 
