--- a/src/pages/resources/testnet/upgrades/v25.md
+++ b/src/pages/resources/testnet/upgrades/v25.md
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.25
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-Sep-07` testnet upgrade to axelar-core `v0.25.0`, vald `v0.25.0`, and tofnd `v0.10.1`.
 
