--- a/src/pages/resources/testnet/upgrades/v26.md
+++ b/src/pages/resources/testnet/upgrades/v26.md
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.26
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-Sep-07` testnet upgrade to axelar-core `v0.26.5`, vald `v0.26.5`, and tofnd `v0.10.1`.
 Release can be found [here](https://github.com/axelarnetwork/axelar-core/releases/tag/v0.26.0).
