--- a/src/pages/resources/testnet/upgrades/v27.md
+++ b/src/pages/resources/testnet/upgrades/v27.md
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.27
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from '/src/components/callout'
 
 Instructions for `2022-Nov-16` testnet upgrade to axelar-core `v0.27.0`, vald `v0.27.0`, and tofnd `v0.10.1`.
 Release can be found [here](https://github.com/axelarnetwork/axelar-core/releases/tag/v0.27.0).
