--- a/src/pages/controller/add-evm-chain.mdx
+++ b/src/pages/controller/add-evm-chain.mdx
@@ -1,12 +1,8 @@
----
-eleventyExcludeFromCollections: true
----
 # Add a new EVM chain
 
-import { Callout } from '/src/components/callout'
-import { Bleed } from 'nextra-theme-docs'
-import Tabs from '../../components/tabs'
-import CodeBlock from '../../components/code-block'
+import { Callout } from '../../components/callout'
+
+
 
 Learn how to add a new EVM chain to the Axelar network.
 
@@ -71,10 +67,9 @@ axelard q evm address avalanche --key-role secondary
 
 Register external governance keys for the new chain.
 
-<div class="tabs">
-<tab title="Mainnet">
-{% markdown %}
-```bash
+<tabs>
+<tab-item title="Mainnet">
+<pre><code class="language-bash">
 axelard tx tss register-external-keys avalanche --from controller \
  --key avax-external-1:03e4da05dd2c4d1a75567fff2ade93de82ccca8701689ce42da40cebd4cc7a2423 \
  --key avax-external-2:03dccf1720dafc44d6e47635b8f0e2705bd57346acce1f18238580461fd3c900ce \
@@ -84,12 +79,10 @@ axelard tx tss register-external-keys avalanche --from controller \
  --key avax-external-6:023f39b9bfcead2854bab63f02880487553430a475ee0f3783c52ef98927cb37d7 \
  --key avax-external-7:03e78bbe19444fe98a77b45c340998437fb902572747f8e44ea99b23dc1106e0d2 \
  --key avax-external-8:0203ce85d1564ce9203b45ad6b93511c8daaa0927f31f3e8d53f18b51afc3f7a27
-```
-{% endmarkdown %}
-</tab>
-<div class="tabs" title="Testnet">
-{% markdown %}
-```bash
+</code></pre>
+</tab-item>
+<tab-item title="Testnet">
+<pre><code class="language-bash">
 axelard tx tss register-external-keys avalanche --from controller \
  --key avax-external-1:041bb2e070cdd8490500f673136f95d80bf4eb9ac6a85fe8fede6070515d75dfd51a7187318aeb17eb53e711a8ccc0939bbda30ac67836969b64422ef6831a6e2a \
  --key avax-external-2:040626a1032fe1f76deb3b4f0cb5c68cc0e29264102111077691478d74eafcdc4c3938bb712b7d8cd15f9c72261432be19217f02e445d4caeb09d7a1abe793642e \
@@ -99,11 +92,9 @@ axelard tx tss register-external-keys avalanche --from controller \
  --key avax-external-6:04900ccd93432b25f4758f8d702bfd91e6192b0931345baafa50328185300a4cd0e392398612f5394fd6026f06fa73fb42a4f43ced2fa5ef326e5d658fd90113d3 \
  --key avax-external-7:04761c872fd2c9c501e75ba3ef8fd65ed4d0f1e7ba60901f758b26645ee3621256a65df63f10b009f1f0e458e7cdb69737098cc30e99cf41887d7adc24c9492729 \
  --key avax-external-8:044202188712caa9c047caaa01eb2a97f631b5ffb0ac1e2de40609c89137d7992a07d7b6c48cb69eee0323855377582a5601008a1190ca6c2b37316c2aead28bfd
-```
-{% endmarkdown %}
-</tab>
+</code></pre>
+</tab-item>
 </tabs>
-
 
 
 The gateway contract can now be deployed on the new EVM chain.
@@ -118,6 +109,15 @@ Deploy the above bytecode to a smart contract on the EVM chain.
 
 <Callout emoji="💡">
   Tip: Deploy the gateway contract however you wish. One option is to use [version 5 of MyEtherWallet](https://v5.myetherwallet.com/) with Metamask as suggested in the video [Onboarding Avalanche to the Axelar Network](https://www.youtube.com/watch?v=iZgqneh7s88).
+    <iframe
+      width="80%"
+      height="430"
+      src="https://www.youtube.com/embed/iZgqneh7s88"
+      frameBorder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowFullScreen
+      style={{ margin: "0 0 1.5rem 2rem" }}
+    />
 </Callout>
 
 Note the following from your deployment transaction:
