--- a/src/pages/validator/external-chains/celo.mdx
+++ b/src/pages/validator/external-chains/celo.mdx
@@ -46,18 +46,14 @@ sudo apt-get install docker.io
 ### Celo Networks
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-`export CELO_IMAGE=us.gcr.io/celo-org/geth:mainnet`
-</CodeBlock>
-},
-{
-title: "Alfajores Testnet",
-content: <CodeBlock language="bash">
-`export CELO_IMAGE=us.gcr.io/celo-org/geth:alfajores`
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>export CELO_IMAGE=us.gcr.io/celo-org/geth:mainnet</code></pre>
+
+</tab-item>
+<tab-item title="Alfajores Testnet">
+ <pre><code>export CELO_IMAGE=us.gcr.io/celo-org/geth:alfajores</code></pre>
+
+</tab-item>
 ]} />
 
 ### Pull the Celo Docker image
@@ -129,18 +125,14 @@ echo "export CELO_DIR=$CELO_DIR" >> ~/.bash_profile
 This command specifies the settings needed to run the node, and gets it started.
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-`docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --datadir /root/.celo`
-</CodeBlock>
-},
-{
-title: "Alfajores Testnet",
-content: <CodeBlock language="bash">
-`docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --alfajores --datadir /root/.celo`
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --datadir /root/.celo</code></pre>
+
+</tab-item>
+<tab-item title="Alfajores Testnet">
+ <pre><code>docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --alfajores --datadir /root/.celo</code></pre>
+
+</tab-item>
 ]} />
 
 
@@ -212,16 +204,12 @@ docker rm celo-fullnode
 #### Start the new node
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-`docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --datadir /root/.celo`
-</CodeBlock>
-},
-{
-title: "Alfajores Testnet",
-content: <CodeBlock language="bash">
-`docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --alfajores --datadir /root/.celo`
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --datadir /root/.celo</code></pre>
+
+</tab-item>
+<tab-item title="Alfajores Testnet">
+ <pre><code>docker run --name celo-fullnode -d --restart unless-stopped --stop-timeout 300 -p 8545:8545 -p 8546:8546 -p 30303:30303 -p 30303:30303/udp -v $CELO_DIR:/root/.celo $CELO_IMAGE --verbosity 3 --syncmode full --http --http.addr 0.0.0.0 --http.api eth,net,web3,debug,admin,personal --light.serve 90 --light.maxpeers 1000 --maxpeers 1100 --etherbase $CELO_ACCOUNT_ADDRESS --alfajores --datadir /root/.celo</code></pre>
+
+</tab-item>
 ]} />
