--- a/src/pages/node/join-old.mdx
+++ b/src/pages/node/join-old.mdx
@@ -37,27 +37,23 @@ cd axelarate-community
 ```
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <div>
+<tab-item title="Mainnet">
+ <div>
 Launch a new Axelar mainnet node with version <Markdown>`0.10.7`</Markdown> of axelar-core:
-<CodeBlock language="bash">
-{"./scripts/node.sh -a v0.10.7 -n mainnet"}
-</CodeBlock>
+<pre><code>./scripts/node.sh -a v0.10.7 -n mainnet</code></pre>
 Your Axelar node will initialize your data folder <Markdown>`~/.axelar`</Markdown>
 
 </div>
-},
-{
-title: "Testnet",
-content: <div>
+
+</tab-item>
+<tab-item title="Testnet">
+ <div>
 Launch a new Axelar testnet node with version <Markdown>`0.13.6`</Markdown> of axelar-core:
-<CodeBlock language="bash">
-{"./scripts/node.sh -a v0.13.6 -n testnet"}
-</CodeBlock>
+<pre><code>./scripts/node.sh -a v0.13.6 -n testnet</code></pre>
 Your Axelar node will initialize your data folder <Markdown>`~/.axelar_testnet`</Markdown>
 </div>
-}
+
+</tab-item>
 ]} />
 
 To recover your secret keys from mnemonics, use `-t path_to_tendermint_key -m path_to_validator_mnemonic -r` (`-r` is to reset the chain). These flags work only on a completely fresh state.
@@ -69,35 +65,27 @@ Then your Axelar node will begin downloading blocks in the blockchain one-by-one
 BACKUP and DELETE the `validator` account secret mnemonic:
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock>
-{"~/.axelar/validator.txt"}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock>
-{"~/.axelar_testnet/validator.txt"}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>~/.axelar/validator.txt</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>~/.axelar_testnet/validator.txt</code></pre>
+
+</tab-item>
 ]} />
 
 BACKUP but do NOT DELETE the Tendermint consensus secret key (this is needed on node restarts):
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock>
-{"~/.axelar/.core/config/priv_validator_key.json"}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock>
-{"~/.axelar_testnet/.core/config/priv_validator_key.json"}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>~/.axelar/.core/config/priv_validator_key.json</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>~/.axelar_testnet/.core/config/priv_validator_key.json</code></pre>
+
+</tab-item>
 ]} />
 
 ## View logs
@@ -107,18 +95,14 @@ View the streaming logs for your Axelar node:
 In a new terminal window:
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{"tail -f ~/.axelar/logs/axelard.log"}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock language="bash">
-{"tail -f ~/.axelar_testnet/logs/axelard.log"}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>tail -f ~/.axelar/logs/axelard.log</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>tail -f ~/.axelar_testnet/logs/axelard.log</code></pre>
+
+</tab-item>
 ]} />
 
 You should see log messages for each block in the blockchain that your node downloads.
@@ -136,18 +120,14 @@ kill -9 $(pgrep -f "axelard start")
 Delete your `data` directory:
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{"rm -r ~/.axelar/.core/data"}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock language="bash">
-{"rm -r ~/.axelar_testnet/.core/data"}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>rm -r ~/.axelar/.core/data</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>rm -r ~/.axelar_testnet/.core/data</code></pre>
+
+</tab-item>
 ]} />
 
 # Download the latest Axelar blockchain snapshot
@@ -167,17 +147,13 @@ Let `{SNAPSHOT_FILE}` denote the file name of the snapshot you downloaded. Examp
 Decompress the downloaded snapshot into your `data` directory:
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{"lz4 -dc --no-sparse {SNAPSHOT_FILE} | tar xfC - ~/.axelar/.core"}
-</CodeBlock>
+<tab-item title="Mainnet">
+ <pre><code>lz4 -dc --no-sparse {SNAPSHOT_FILE
+</tab-item> | tar xfC - ~/.axelar/.core</code></pre>
 },
-{
-title: "Testnet",
-content: <CodeBlock language="bash">
-{"lz4 -dc --no-sparse {SNAPSHOT_FILE} | tar xfC - ~/.axelar_testnet/.core"}
-</CodeBlock>
+<tab-item title="Testnet">
+ <pre><code>lz4 -dc --no-sparse {SNAPSHOT_FILE
+</tab-item> | tar xfC - ~/.axelar_testnet/.core</code></pre>
 }
 ]} />
 
@@ -186,18 +162,14 @@ content: <CodeBlock language="bash">
 Resume your Axelar node with the latest version of axelar-core:
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{"./scripts/node.sh -n mainnet"}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock language="bash">
-{"./scripts/node.sh -n testnet"}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>./scripts/node.sh -n mainnet</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>./scripts/node.sh -n testnet</code></pre>
+
+</tab-item>
 ]} />
 
 Your Axelar node will launch and resume downloading the blockchain. You should see log messages for new blocks.
