--- a/src/pages/validator/setup/manual.mdx
+++ b/src/pages/validator/setup/manual.mdx
@@ -18,20 +18,16 @@ Check the appropriate version for the network accordingly:
 - [Testnet](/resources/testnet)
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{`AXELARD_RELEASE=v0.33.1
-TOFND_RELEASE=v0.10.1`}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock language="bash">
-{`AXELARD_RELEASE=v0.33.1
-TOFND_RELEASE=v0.10.1`}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>AXELARD_RELEASE=v0.33.1
+TOFND_RELEASE=v0.10.1</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>AXELARD_RELEASE=v0.33.1
+TOFND_RELEASE=v0.10.1</code></pre>
+
+</tab-item>
 ]} />
 
 ```bash
@@ -88,18 +84,14 @@ Save this mnemonic somewhere safe and delete the file by ` rm $HOME/.tofnd/expor
 ## Set environment variables
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{"echo export CHAIN_ID=axelar-dojo-1 >> $HOME/.profile"}
-</CodeBlock>
-},
-{
-title: "Testnet",
-content: <CodeBlock language="bash">
-{"echo export CHAIN_ID=axelar-testnet-lisbon-3 >> $HOME/.profile"}
-</CodeBlock>
-}
+<tab-item title="Mainnet">
+ <pre><code>echo export CHAIN_ID=axelar-dojo-1 >> $HOME/.profile</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>echo export CHAIN_ID=axelar-testnet-lisbon-3 >> $HOME/.profile</code></pre>
+
+</tab-item>
 ]} />
 
 ```bash
@@ -132,55 +124,51 @@ source $HOME/.profile
 Initialize your Axelar node, fetch configuration, genesis, seeds.
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{`axelard init $MONIKER --chain-id $CHAIN_ID
+<tab-item title="Mainnet">
+ <pre><code>axelard init $MONIKER --chain-id $CHAIN_ID
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/config.toml -O $HOME/.axelar/config/config.toml
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/app.toml -O $HOME/.axelar/config/app.toml
 wget https://axelar-mainnet.s3.us-east-2.amazonaws.com/genesis.json -O $HOME/.axelar/config/genesis.json
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/resources/mainnet/seeds.toml -O $HOME/.axelar/config/seeds.toml
 
 # set external ip to your config.json file
-sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml`}
-</CodeBlock>
-},
-{ title: "Testnet", content: <CodeBlock language="bash">
-{`axelard init $MONIKER --chain-id $CHAIN_ID
+sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>axelard init $MONIKER --chain-id $CHAIN_ID
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/config.toml -O $HOME/.axelar/config/config.toml
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/app.toml -O $HOME/.axelar/config/app.toml
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/resources/testnet/genesis.json -O $HOME/.axelar/config/genesis.json
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/resources/testnet/seeds.toml -O $HOME/.axelar/config/seeds.toml
 
 # set external ip to your config.json file
-sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml`}
-</CodeBlock>
-}
+sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml</code></pre>
+
+</tab-item>
 ]} />
 
 ## Sync From Snapshot
 
 <Tabs tabs={[
-{
-title: "Mainnet",
-content: <CodeBlock language="bash">
-{`axelard tendermint unsafe-reset-all
+<tab-item title="Mainnet">
+ <pre><code>axelard tendermint unsafe-reset-all
 URL=\`curl -L https://quicksync.io/axelar.json | jq -r '.[] |select(.file=="axelar-dojo-1-pruned")|.url'\`
 echo $URL
 cd $HOME/.axelar/
 wget -O - $URL | lz4 -d | tar -xvf -
-cd $HOME`}
-</CodeBlock>
-},
-{ title: "Testnet", content: <CodeBlock language="bash">
-{`axelard tendermint unsafe-reset-all
+cd $HOME</code></pre>
+
+</tab-item>
+<tab-item title="Testnet">
+ <pre><code>axelard tendermint unsafe-reset-all
 URL=\`curl -L https://quicksync.io/axelar.json | jq -r '.[] |select(.file=="axelartestnet-lisbon-3-pruned")|.url'\`
 echo $URL
 cd $HOME/.axelar/
 wget -O - $URL | lz4 -d | tar -xvf -
-cd $HOME`}
-</CodeBlock>
-}
+cd $HOME</code></pre>
+
+</tab-item>
 ]} />
 
 ## Create services
