--- a/src/pages/validator/external-chains/binance.mdx
+++ b/src/pages/validator/external-chains/binance.mdx
@@ -49,7 +49,7 @@ cd $HOME
 
 
 
-<Tabs tabs={[
+<tabs>
 <tab-item title="Mainnet">
  <pre><code>mkdir -p $HOME/.bsc/config
 cd $HOME/.bsc/config
@@ -68,7 +68,7 @@ rm testnet.zip
 </code></pre>
 
 </tab-item>
-]} />
+</tabs>
 
 
 
