--- a/src/pages/validator/external-chains/optimism.mdx
+++ b/src/pages/validator/external-chains/optimism.mdx
@@ -36,7 +36,7 @@ cp .env.example .env
 ## Set node config
 
 Set the following config options in `simple-optimism-node/.env`:
-<Tabs tabs={[
+<tabs>
 <tab-item title="Mainnet">
  <pre><code>NETWORK_NAME=mainnet
 NODE_TYPE=full
@@ -58,7 +58,7 @@ OP_NODE__RPC_ENDPOINT=
 OP_NODE__RPC_TYPE=basic</code></pre>
 
 </tab-item>
-]} />
+</tabs>
 
 ## Start the node
 ```bash
