--- a/src/pages/resources/testnet.mdx
+++ b/src/pages/resources/testnet.mdx
@@ -1,11 +1,12 @@
 # Testnet
 
 import { Callout } from '/src/components/callout'
-import MarkdownPath from '../../components/markdown'
 import IBCChannels from '../../components/ibc/channels'
 import TransferFeeCalculator from '../../components/transfer-fee/calculator'
 import EVMChains from '../../components/evm/chains'
 import EVMAssets from '../../components/evm/assets'
+import UpgradePathTestnet from '/src/upgrade-path-testnet.md';
+
 
 | Variable              | Value     |
 | --------------------- | --------- |
@@ -72,5 +73,5 @@ The gas relayer fee does not include any transaction fee assessed by the source 
 
 ## Upgrade Path
 
-<MarkdownPath src="/md/testnet/upgrade-path.md" />
+<UpgradePathTestnet  />
 
