--- a/src/pages/validator/external-chains/avalanche.mdx
+++ b/src/pages/validator/external-chains/avalanche.mdx
@@ -26,7 +26,7 @@ sudo apt-get install wget jq -y
 
 Check the appropriate version for the network accordingly [in their docs](https://docs.avax.network/build/tutorials/nodes-and-staking/run-avalanche-node) or choose the [latest release](https://github.com/ava-labs/avalanchego/releases)
 
-<Tabs tabs={[
+<tabs>
 <tab-item title="Mainnet">
  <pre><code># This is an example - check their docs and release page to opt for the right version
 AVALANCHEGO=v1.9.3
@@ -38,7 +38,7 @@ AVALANCHEGO=v1.9.3
 AVALANCHEGO=v1.9.3</code></pre>
 
 </tab-item>
-]} />
+</tabs>
 
 
 ```bash
@@ -73,7 +73,7 @@ avalanchego --version
 
 Note: Update your shell profile in accordance with the shell you are using
 
-<Tabs tabs={[
+<tabs>
 <tab-item title="Mainnet">
  <pre><code>echo export NETWORK_ID=mainnet >> $HOME/.profile</code></pre>
 
@@ -82,7 +82,7 @@ Note: Update your shell profile in accordance with the shell you are using
  <pre><code>echo export NETWORK_ID=fuji >> $HOME/.profile</code></pre>
 
 </tab-item>
-]} />
+</tabs>
 
 Apply your changes
 
