--- a/src/pages/validator/external-chains/ethereum.mdx
+++ b/src/pages/validator/external-chains/ethereum.mdx
@@ -113,7 +113,7 @@ Compare it with what you have in `sudo journalctl -u geth -f`
 
 Alternatively, you can now also use the Geth JavaScript console and check status of your node by attaching to your newly created `geth.ipc`. Don't forget to replace `$USER` and `path`, depending on your server configuration.
 
-<Tabs tabs={[
+<tabs>
 <tab-item title="Mainnet">
  <pre><code>geth attach ipc:/root/.ethereum/geth.ipc
 eth.syncing</code></pre>
@@ -124,7 +124,7 @@ eth.syncing</code></pre>
 eth.syncing</code></pre>
 
 </tab-item>
-]} />
+</tabs>
 
 Once your node is fully synced, the output from above will say `false`. To test your Ethereum RPC node, you can send an RPC request using `cURL`
 
