--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -2,13 +2,15 @@ import { Callout } from '/src/components/callout';
 import Resources from "../components/resources";
 
 
+
+
 # Resources
 
 <tabs>
-<tab-item title="Mainnet">
+<tab-item title="Mainnet" class="bleed">
     <Resources environment="mainnet" />
 </tab-item>
-<tab-item title="Testnet">
+<tab-item title="Testnet" class="bleed">
     <Resources environment="testnet" />
 </tab-item>
 </tabs>
