remove old components

--- a/src/pages/404.mdx
+++ b/src/pages/404.mdx
@@ -1,6 +1,4 @@
 # 404 Page Not Found
 ## Hmm, it looks like this page doesn’t exist.
 
-Our docs change frequently.
-
-You should be able to find what you’re looking for at [https://docs.axelar.dev](https://docs.axelar.dev).
+If you followed an incoming link or think this is a mistake, [let us know](https://github.com/axelarnetwork/axelar-docs/issues/new) so we can fix it!
