--- a/src/pages/learn/cli.mdx
+++ b/src/pages/learn/cli.mdx
@@ -2,7 +2,7 @@
 
 import { Callout } from '/src/components/callout'
 
-Some CLI commands require access to a fully synced Axelar node. Learn how to [start your own Axelar node](../node/join).
+Some CLI commands require access to a fully synced Axelar node. Learn how to [start your own Axelar node](/node/join).
 
 Some CLI commands require AXL tokens to pay for on-chain transaction fees. Get testnet AXL tokens from the Axelar faucets: [testnet](https://faucet.testnet.axelar.dev/).
 
